Fixing vertical scrollbar issue on home

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,9 +2,9 @@
   text-align: center;
   background: #181818;
   min-height: 100vh;
-  min-width: 100vw;
   width: 100vw;
   color: #fff;
+  overflow-x: hidden;
 }
 
 .App-logo {
@@ -22,10 +22,10 @@
   margin: 0;
   max-width: 100vw;
   padding: 0;
-  height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
+  flex: 1;
 }
 
 .App-link {
@@ -187,7 +187,6 @@
 
 /* Landing Page Styles */
 .landing-page {
-  min-height: 100vh;
   background: #181818;
   color: #fff;
   padding: 2rem;
